# ogr

./: README.md  noxfile.py  pyproject.toml
ogr/: connection.py  graph.py  model.py  node.py  result.py
tests/: example.py
